src/objects/Unit_Product_Type__c.object
<CustomObject>
    <fields>
        <fullName>Active_Fields_Count__c</fullName>
        <label>Active Fields Count</label>
        <summaryFilterItems>
            <field>Unit_Product_Type_Field__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Unit_Product_Type_Field__c.Unit_Product_Type__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Unit Product Type</label>
    <nameField>
        <displayFormat>UPT-{00000000}</displayFormat>
        <label>Unit Product Type Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Unit Product Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>